@@ -2,17 +2,15 @@ package com.ronrook.StockManager.infrastructure.repositories;
 
 import com.ronrook.StockManager.domain.model.Product;
 import com.ronrook.StockManager.application.ports.out.IProductRepositoryPort;
-import com.ronrook.StockManager.infrastructure.entities.ProductMongoEntity;
 import com.ronrook.StockManager.infrastructure.mappers.ProductMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Repository;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Repository
-public class ProductRepositoryPortMongo implements IProductRepositoryPort {
+public class ProductRepositoryAdapterMongo implements IProductRepositoryPort {
 
     @Autowired
     private MongoProductRepository mongoProductRepository;
@@ -40,7 +38,7 @@ public class ProductRepositoryPortMongo implements IProductRepositoryPort {
         return mongoProductRepository.findAll()
                 .stream()
                 .map(this.productMapper::entityToDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
